--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <version>1.3.8.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.37</version>
+        </dependency>
 
     </dependencies>
 
